--- a/views/layout.pug
+++ b/views/layout.pug
@@ -171,7 +171,7 @@ html
                   li.divider
                   li
                     .navbar-login.navbar-login-session
-                      a.btn.btn-default.btn-square.btn-block(href='#') Logout
+                      a.btn.btn-default.btn-square.btn-block(href='/logout') Logout
     // end:navbar top
     // start:wrapper body
     .wrapper.row-offcanvas.row-offcanvas-left
