--- a/views/frontend.pug
+++ b/views/frontend.pug
@@ -12,5 +12,8 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js')
     script.
       var socket = io.connect('http://localhost:3000');
-  body
+  body.cl-default.fixed#login
     block content
+    script(src="js/jquery-1.11.1.min.js")
+    script(src="js/bootstrap.min.js")
+    script(src="js/arjuna.js")
