--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,7 @@ html
     link(rel="stylesheet" type="text/css" href="css/arjuna.css")
     link(rel="stylesheet" type="text/css" href="plugins/data-tables/DT_bootstrap.css")
     script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js') 
+    script(src="js/jquery-1.11.1.min.js")
   body.cl-default.fixed
     header.header
       a.logo(href='/dashboard')
@@ -18,131 +19,8 @@ html
         |  D0P3TBOT
       // Header Navbar: style can be found in header.less
       nav.navbar.navbar-static-top(role='navigation')
-        // Sidebar toggle button
-        a.navbar-btn.sidebar-toggle(href='#', data-target='#atas', data-toggle='offcanvas', role='button')
-          span.sr-only Toggle navigation
-          span.icon-bar
-          span.icon-bar
-          span.icon-bar
         #atas.collapse.navbar-collapse
           .navbar-left
-            ul.nav.navbar-nav
-              li.dropdown.messages-menu
-                a.dropdown-toggle(href='#', data-toggle='dropdown')
-                  i.fa.fa-envelope
-                  span.label.label-success 4
-                ul.dropdown-menu
-                  li.header You have 4 messages
-                  li
-                    // inner menu: contains the actual data
-                    ul.menu
-                      li
-                        // start message
-                        a(href='#')
-                          .pull-left
-                            img.img-circle(src='img/avatar3.png', alt='User Image')
-                          h4
-                            | Support Team
-                            small
-                              i.fa.fa-clock-o
-                              |  5 mins
-                          p Why not buy a new awesome theme?
-                      // end message
-                      li
-                        a(href='#')
-                          .pull-left
-                            img.img-circle(src='img/avatar2.png', alt='user image')
-                          h4
-                            | Arjuna Design Team
-                            small
-                              i.fa.fa-clock-o
-                              |  2 hours
-                          p Why not buy a new awesome theme?
-                      li
-                        a(href='#')
-                          .pull-left
-                            img.img-circle(src='img/avatar.png', alt='user image')
-                          h4
-                            | Developers
-                            small
-                              i.fa.fa-clock-o
-                              |  Today
-                          p Why not buy a new awesome theme?
-                      li
-                        a(href='#')
-                          .pull-left
-                            img.img-circle(src='img/avatar2.png', alt='user image')
-                          h4
-                            | Sales Department
-                            small
-                              i.fa.fa-clock-o
-                              |  Yesterday
-                          p Why not buy a new awesome theme?
-                      li
-                        a(href='#')
-                          .pull-left
-                            img.img-circle(src='img/avatar.png', alt='user image')
-                          h4
-                            | Reviewers
-                            small
-                              i.fa.fa-clock-o
-                              |  2 days
-                          p Why not buy a new awesome theme?
-                  li.footer
-                    a(href='#') See All Messages
-              li.dropdown.tasks-menu
-                a.dropdown-toggle(href='#', data-toggle='dropdown')
-                  i.fa.fa-tasks
-                  span.label.label-danger 9
-                ul.dropdown-menu
-                  li.header You have 9 tasks
-                  li
-                    // inner menu: contains the actual data
-                    ul.menu
-                      li
-                        // Task item
-                        a(href='#')
-                          h3
-                            | Design some buttons
-                            small.pull-right 20%
-                          .progress.xs
-                            .progress-bar.progress-bar-aqua(style='width: 20%', role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100')
-                              span.sr-only 20% Complete
-                      // end task item
-                      li
-                        // Task item
-                        a(href='#')
-                          h3
-                            | Create a nice theme
-                            small.pull-right 40%
-                          .progress.xs
-                            .progress-bar.progress-bar-green(style='width: 40%', role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100')
-                              span.sr-only 40% Complete
-                      // end task item
-                      li
-                        // Task item
-                        a(href='#')
-                          h3
-                            | Some task I need to do
-                            small.pull-right 60%
-                          .progress.xs
-                            .progress-bar.progress-bar-red(style='width: 60%', role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100')
-                              span.sr-only 60% Complete
-                      // end task item
-                      li
-                        // Task item
-                        a(href='#')
-                          h3
-                            | Make beautiful transitions
-                            small.pull-right 80%
-                          .progress.xs
-                            .progress-bar.progress-bar-yellow(style='width: 80%', role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100')
-                              span.sr-only 80% Complete
-                      // end task item
-                  li.footer
-                    a(href='#') View all tasks
-              li.form-search
-                input.form-control(type='text', placeholder='Search..')
           .navbar-right
             ul.nav.navbar-nav
               li.dropdown
@@ -264,17 +142,17 @@ html
                 a(href='/notices')
                   i.fa.fa-bar-chart-o
                   span Notices
-            if message == "Alerts"
+            if message == "Chat Alerts"
               li.active
                 a(href='/alerts')
-                  i.fa.fa-exclamation
-                  span Alerts
+                  i.fa.fa-comment
+                  span Chat Alerts
             else
               li
                 a(href='/alerts')
-                  i.fa.fa-exclamation
-                  span Alerts
-            if message == "Discord"
+                  i.fa.fa-comment
+                  span Chat Alerts
+            if message == "Giveaways"
               li.active
                 a(href='/giveaways')
                   i.fa.fa-gift
@@ -284,7 +162,7 @@ html
                 a(href='/giveaways')
                   i.fa.fa-gift
                   span Giveaways   
-            if message == "Discord"
+            if message == "Security"
               li.active
                 a(href='/security')
                   i.fa.fa-shield
@@ -317,7 +195,6 @@ html
       // end:left sidebar
       // start:right sidebar
       block content        
-    script(src="js/jquery-1.11.1.min.js")
     script(src="js/bootstrap.min.js")
     script(src="js/arjuna.js")
     script(src="plugins/advanced-datatable/media/js/jquery.dataTables.js")
